# e-commerce_project

./: main.py  pyproject.toml
src/: category.py  lawn_grass.py  mixin.py  new_object_error.py  option.py  order.py  product.py  shop.py  smartphone.py  views.py
tests/: test_category.py  test_lawn_grass.py  test_product.py  test_smartphone.py
