[tool.poetry]
name = "e-commerce-project"
version = "0.1.0"
description = ""
authors = ["Islam <islamka.1994@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
black = "^23.12.1"
flake8 = "^6.1.0"
isort = "^5.13.2"
mypy = "^1.8.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
